refactor: Restructure project with organized directory layout
- Reorganize files into logical directories:
  - data/ for all JSON data files
  - assets/ for media files
  - scripts/ organized by purpose (data/, media/, git/, version/)
  - docs/ organized by topic (architecture/, media/, setup/, version/)

- Move data files to data/course-797/
- Move documentation to docs/ with proper categorization
- Reorganize scripts into purpose-based subdirectories
- Move orphaned media files to assets/course-797/

- Add project configuration:
  - package.json with npm scripts for common tasks
  - requirements.txt for Python dependencies
  - Updated .gitignore for new structure

- Update all script paths and references:
  - Update media management scripts to reference new data path
  - Update git scripts with new file paths
  - Update documentation with new structure

- Update README.md with new project structure
- Update scripts/README.md with organized script documentation

This restructuring improves maintainability, scalability, and follows
software development best practices for project organization.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,40 @@ course_797_extensions.fixed.json
 course_797_extensions.json
 course_797_extensions.optimized.json
 
-# Keep course-797.json as reference
-# course-797.json
+# Backup files
+*.backup.json
+*.bak
+data/**/*.backup.json
+
+# Temporary files
+temp.json
+*.tmp
+*.swp
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
